# DOJO_plant_vertex_model

./: CMakeLists.txt  README.md
include/: 2dvCell.h  2dvInitial.h  2dvLine.h  2dvOrgan.h  2dvVertex.h  IOV.h  class.h  division.h  force.h  geo2dv.h  parameter.h  vec.h  wangMath.h  wangSystem.h
input/: 61cells.txt  mode.txt  obovate_petal.txt  parameter.txt
petal_simulation_results/: 2dv  2dv_cell0000000000.vtk  2dv_cell0000100000.vtk  2dv_cell0000200000.vtk  2dv_cell0000300000.vtk  2dv_cell0000400000.vtk  2dv_cell0000500000.vtk  2dv_cell0000600000.vtk  2dv_cell0000700000.vtk  2dv_cell0000800000.vtk  2dv_cell0000900000.vtk  2dv_cell0001000000.vtk  2dv_cell0001100000.vtk  2dv_cell0001200000.vtk  2dv_cell0001300000.vtk  2dv_cell0001400000.vtk  2dv_cell0001500000.vtk  2dv_cell0001600000.vtk  2dv_cell0001700000.vtk  2dv_cell0001800000.vtk  2dv_cell0001900000.vtk  2dv_cell0002000000.vtk  2dv_cell0002100000.vtk  2dv_cell0002200000.vtk  2dv_cell0002300000.vtk  2dv_cell0002400000.vtk  2dv_cell0002500000.vtk  2dv_cell0002600000.vtk  2dv_cell0002700000.vtk  2dv_cell0002800000.vtk  2dv_cell0002900000.vtk  2dv_cell0003000000.vtk  2dv_cell0003100000.vtk  2dv_cell0003200000.vtk  2dv_cell0003300000.vtk  2dv_cell0003400000.vtk  2dv_cell0003500000.vtk  2dv_cell0003600000.vtk  2dv_cell0003700000.vtk  2dv_cell0003800000.vtk  (+625 more)
src/: 2dvCell.cpp  2dvInitial.cpp  2dvLine.cpp  2dvOrgan.cpp  2dvVertex.cpp  IOV.cpp  division.cpp  force.cpp  geo.cpp  main.cpp  parameter.cpp  wangMath.cpp  wangSystem.cpp
tutorial/: 1 C++ and CMake.md  2 obovate Shape.md
(+2 files in other folders)
